AUTOMAKE_OPTIONS = foreign subdir-objects
bin_PROGRAMS = cursetag
cursetag_SOURCES = src/autofill.cpp src/autofill.h src/cursetag.cpp src/encodings.cpp src/encodings.h \
	src/fileinfo.cpp src/fileinfo.h src/filelist.cpp src/filelist.h src/inputhandle.cpp src/inputhandle.h \
	src/io.cpp src/io.h
cursetag_LDADD = -ltag
dist_man1_MANS = cursetag.1
